--- a/Styles/style.css
+++ b/Styles/style.css
@@ -550,6 +550,345 @@ footer .copyright-footer p a {
   width: 100%;
 }
 
+footer {
+  background: #000;
+  padding: 1.5em;
+}
+
+footer .footer-hero {
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 2fr 1fr 1fr 1fr;
+      grid-template-columns: 2fr 1fr 1fr 1fr;
+  gap: 1em;
+}
+
+footer .footer-hero ul li {
+  list-style: none;
+  margin: .5em 0;
+}
+
+footer .footer-hero ul li a {
+  text-decoration: none;
+  color: #eee;
+}
+
+footer .footer-hero div h2 {
+  color: #fff;
+  margin-bottom: .5em;
+}
+
+footer .footer-hero div p {
+  color: #fff;
+}
+
+footer .footer-hero .contact-footer {
+  line-height: 1.5;
+}
+
+footer .footer-hero .contact-footer a i {
+  margin-right: .51em;
+}
+
+footer .footer-hero .contact-footer .contact-social {
+  margin-top: 1.5em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  gap: 1.5em;
+}
+
+footer .footer-hero .contact-footer .contact-social a {
+  font-size: 1.5em;
+  text-decoration: none;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+footer .footer-hero .contact-footer .contact-social a:nth-child(1) {
+  color: #E36387;
+}
+
+footer .footer-hero .contact-footer .contact-social a:nth-child(2) {
+  color: #09599b;
+}
+
+footer .footer-hero .contact-footer .contact-social a:nth-child(3) {
+  color: #22d39e;
+}
+
+footer .footer-hero .contact-footer .contact-social a:hover {
+  -webkit-transform: translate(0px, -5px) scale(1.3);
+          transform: translate(0px, -5px) scale(1.3);
+}
+
+footer .copyright-footer {
+  padding: 1em;
+}
+
+footer .copyright-footer p {
+  color: #eee;
+  text-align: center;
+  word-spacing: .21em;
+}
+
+footer .copyright-footer p a {
+  text-decoration: none;
+  color: #E36387;
+  font-weight: 600;
+}
+
+.hero-wrrapper-slider {
+  height: 350px;
+  margin: 1em 4em;
+  padding: 1em;
+}
+
+.hero-wrrapper-slider .swiper {
+  width: 100%;
+  height: 100%;
+}
+
+.hero-wrrapper-slider .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.hero-wrrapper-slider .swiper .swiper-slide .slide-img {
+  overflow: hidden;
+  height: 100%;
+  width: 100%;
+  border-radius: 30px;
+  -webkit-box-shadow: 0 0 10px 2px #ddd;
+          box-shadow: 0 0 10px 2px #ddd;
+}
+
+.hero-wrrapper-slider .swiper .swiper-slide .slide-img a img {
+  height: 100%;
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.swiper-button-prev,
+.swiper-button-next {
+  color: var(--swiper-navigation-color, #eef2f7);
+  -webkit-transform: scale(0.7);
+          transform: scale(0.7);
+}
+
+.hotdeals-container {
+  margin: 1.5em 2em;
+  padding: 1em;
+  cursor: pointer;
+}
+
+.hotdeals-container .hotdeal-header {
+  margin-bottom: 2em;
+}
+
+.hotdeals-container .hotdeal-header h2, .hotdeals-container .hotdeal-header p {
+  line-height: 1.5;
+}
+
+.hotdeals-container .hotdeal-header h2 i {
+  color: #ccc;
+  position: relative;
+  top: 2px;
+  left: 5px;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal {
+  -webkit-box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  overflow: hidden;
+  background: #fff;
+  padding: 1em;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal .hotdeal-detail {
+  line-height: 1.6;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal .hotdeal-detail p:nth-child(2) {
+  font-size: .8em;
+  color: #c54b70;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal .purchase-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: .5em;
+  margin-top: .3em;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal .purchase-section button {
+  border: 0;
+  outline: 0;
+  padding: .3em 1em;
+  background: none;
+  border: 1px solid #000;
+  cursor: pointer;
+  width: 95%;
+  border-radius: 2px;
+  -webkit-transition: .5s ease;
+  transition: .5s ease;
+}
+
+.hotdeals-container .hotdeals-swiper .swiper-wrapper .hotdeal .purchase-section button:hover {
+  width: 100%;
+}
+
+.product-container {
+  padding: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.product-container .product-slider {
+  width: 50%;
+  height: 550px;
+  padding: 1em;
+  background: transparent;
+  cursor: pointer;
+}
+
+.product-container .product-slider .swiper {
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.product-container .product-slider .swiper .swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: transparent;
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+}
+
+.product-container .product-slider .swiper .swiper-slide .swiper-slide figure img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.product-container .product-description {
+  width: 45%;
+  line-height: 1.6;
+}
+
+.product-container .product-description h1 {
+  color: #E36387;
+  margin: .5em 0;
+  font-size: 2.5em;
+}
+
+.product-container .product-description p {
+  margin: .5em 0;
+}
+
+.product-container .product-description .product__price {
+  margin: .541em 0;
+}
+
+.product-container .product-description .product__varient h3 {
+  font-size: 1.5em;
+}
+
+.product-container .product-description .product__varient .__varients button {
+  border: none;
+  background: none;
+  padding: .5em 1.5em;
+  border: 1px solid #E36387;
+  margin: 1em .15em;
+  font-weight: 800;
+  border-radius: 3px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  -webkit-box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.product-container .product-description .product__varient .__varients .active-varient {
+  background: #E36387;
+  color: #fff;
+}
+
+.product-container .product-description .purchase__options .purchase__optionsBtn {
+  border: none;
+  background: none;
+  padding: 1em 1.5em;
+  border: 1px solid #E36387;
+  margin: 1.5em 0;
+  font-weight: 800;
+  border-radius: 3px;
+  -webkit-transition: all .5s ease;
+  transition: all .5s ease;
+  -webkit-box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0 5px 0px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+}
+
+.product-container .product-description .purchase__options .addtocartbtn {
+  width: 250px;
+  background: #E36387;
+  color: #fff;
+}
+
+.product-container .product-description .purchase__options .buynowbtn {
+  margin-left: 1em;
+}
+
+.product-container .product-description .product__highlights h2 {
+  margin-top: .51em;
+}
+
 * {
   margin: 0;
   padding: 0;
