--- a/Styles/_product.scss
+++ b/Styles/_product.scss
@@ -34,6 +34,7 @@
         -webkit-align-items: center;
         align-items: center;
         height: 90%;
+        // flex-direction: column;
         // border: $redborder;
                     figure{
                         height: 100%;
@@ -134,9 +135,20 @@
     }
 }
 .similar-product-slider{
+    h1{
+        margin-top: .3em;
+    }
+    p{
+        margin-block: .5em;
+    }
+    padding: 1em;
+    margin: 1em .2em;
     .swiper {
+        margin-top: 1em;
         width: 100%;
         height: 100%;
+        margin-left: auto;
+        margin-right: auto;
         .swiper-slide {
             text-align: center;
             font-size: 18px;
@@ -153,13 +165,79 @@
             -ms-flex-align: center;
             -webkit-align-items: center;
             align-items: center;
-            .swiper-slide img {
-                display: block;
+            flex-direction: column;
+            background: #fff;
+            max-width: 100%;
+            height: 250px;
+            padding: .5em;
+            border-radius: 5px;
+            box-shadow: $shadow;
+         .similar-product__img{
+            height: 60%;
+            overflow: hidden;
+                img{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                }
+            }
+            .similar-product__description{
+                // border: 2px solid blue;
+                height: 40%;
+                line-height: 1.6;
                 width: 100%;
-                height: 100%;
-                object-fit: cover;
-              }
+                h2{
+                    font-size: .9em;
+                    margin-top: .2em;
+                    font-weight: 100;
+                }
+                p{
+                    color: $lightpink;
+                    font-size: 80%;
+                    font-weight: 600;
+                }
+                .purchase-options{
+                    display: flex;
+                    // border: $redborder;
+                    justify-content: center;
+                    align-items: center;
+                    gap: 0.5em;
+                    button{
+                        border: none;
+                        border: 1px solid royalblue;
+                        background: none;
+                        padding: .3em 0;
+                        outline: none;
+                        transition: .5s ease;
+                        border-radius: 3px;
+                        cursor: pointer;
+                        &:hover{
+                            background: royalblue;
+                            color: #fff;
+                        }
+                        &:nth-child(1){
+                            width: 70%;
+                            background: royalblue;
+                            color: #fff;
+                        }
+                        &:nth-child(2){
+                            width: 40%;
+                        }
+                    }
+                }
+            }
           }
     
       }
+}
+
+// pagination design
+
+.similar-product-slider{
+    .swiper{
+        padding-bottom: 2em;
+        .swiper-pagination{
+            bottom: 5px;
+        }
+    }
 }
