--- a/Styles/_swiper.scss
+++ b/Styles/_swiper.scss
@@ -94,21 +94,31 @@
                 .purchase-section{
                   display: flex;
                   align-items: center;
-                  gap: .5em;
+                  gap: .2em;
                   margin-top: .3em;
                   button{
                     border: 0;
                     outline: 0;
-                    padding: .3em 1em;
+                    padding: .3em 0;
                     background: none;
-                    border: 1px solid #000;
+                    border: 1px solid royalblue;
                     cursor: pointer;
                     width: 95%;
-                    border-radius: 2px;
+                    border-radius: 3px;
                     transition: .5s ease;
                     &:hover{
-                      width: 100%;
+                      width: 80%;
+                      background: royalblue;
+                      color: #fff;
                     }
+                  }
+                  .addtoCart{
+                    width: 70%;
+                    background: royalblue;
+                    color: #fff;
+                  }
+                  .buynowbtn{
+                    width: 35%;
                   }
                 }
             }
