--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 .signup-container {
   margin: 3em 1em;
 }
@@ -1115,6 +1117,94 @@ footer .copyright-footer p a {
 
 .testimonial .testimonial-container .testimonial__box h5 {
   margin-top: .81em;
+}
+
+.faq-container {
+  position: relative;
+  padding: 2em;
+}
+
+.faq-container h1 {
+  text-align: center;
+  margin-bottom: .75em;
+  font-family: 'Great Vibes', cursive;
+  color: tomato;
+  font-size: 5vw;
+  word-spacing: 2px;
+  position: relative;
+}
+
+.faq-container h1::after {
+  content: '';
+  background: teal;
+  position: absolute;
+  inset: 0;
+  height: 1.2px;
+  width: 20%;
+  margin: auto;
+  top: 120%;
+}
+
+.faq-container .faq-wrapper {
+  /* border: 1px solid #000; */
+  margin: auto;
+  max-width: 620px;
+}
+
+.faq-container .faq-wrapper .question-container {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  margin: .5em 0;
+  padding: 1em;
+  line-height: 1.5;
+  -webkit-box-shadow: 0 0 5px 1px #eee;
+          box-shadow: 0 0 5px 1px #eee;
+  cursor: pointer;
+  font-family: 'Poppins', sans-serif;
+}
+
+.faq-container .faq-wrapper .question-container .question {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: .5em 0;
+  line-height: 1.1;
+}
+
+.faq-container .faq-wrapper .question-container .question .question-btn-toggle {
+  font-weight: 600;
+  font-size: 1.7em;
+  padding: .3em;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+  width: 30px;
+  height: 30px;
+}
+
+.faq-container .faq-wrapper .question-container .question .question-btn-toggle i {
+  position: absolute;
+}
+
+.faq-container .faq-wrapper .question-container .answer {
+  height: 0;
+  overflow: hidden;
+  -webkit-transition: .51s ease;
+  transition: .51s ease;
+}
+
+.faq-container .faq-wrapper .active-answer .answer {
+  height: 55px;
+}
+
+.faq-container .faq-wrapper .active-answer .fa-plus {
+  display: none;
 }
 
 * {
